cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Infraestructura para Crypto Tracker - EC2 y S3

Resources:
  # S3 Bucket para logs o backups
  CryptoAppBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "crypto-tracker-logs-${AWS::AccountId}"

  CryptoSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permitir trafico HTTP y SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # Temporal
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

          # Instancia EC2
  CryptoServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: vockey
      ImageId: ami-0ec10929233384c7f
      SecurityGroupIds:
        - !Ref CryptoSG

      UserData:
        Fn::Base64: !Sub |
          #!/bin/sh
          # 1. Actualizar e instalar Docker (Ubuntu ya trae docker-compose v2 en sus repos)
          apt-get update -y
          apt-get install -y docker.io docker-compose-v2 git

          # 2. Permisos y servicios
          systemctl start docker
          systemctl enable docker
          usermod -aG docker ubuntu

          # 3. Clonar repositorio
          cd /home/ubuntu
          git clone https://github.com/zekar47/crypto-tracker-devops.git
          
          # 4. Automatizar el script de deploy (Descomentar git pull)
          # sed -i 's/# git pull/git pull/' /home/ubuntu/crypto-tracker-devops/scripts/deploy.sh
          # mala idea
          
          # 5. Ajustar dueños
          chown -R ubuntu:ubuntu /home/ubuntu/crypto-tracker-devops

          # 6. Configurar Cron (En Ubuntu, el directorio de crontabs es distinto)
          echo "00 08 * * * /home/ubuntu/crypto-tracker-devops/scripts/start_app.sh" >> /var/spool/cron/crontabs/ubuntu
          echo "00 20 * * * /home/ubuntu/crypto-tracker-devops/scripts/stop_app.sh" >> /var/spool/cron/crontabs/ubuntu
          chown ubuntu:crontab /var/spool/cron/crontabs/ubuntu
          chmod 600 /var/spool/cron/crontabs/ubuntu
      Tags:
        - Key: Name
          Value: CryptoTrackerServer
